misc/custom.scss
---

---

@charset "utf-8";

// Agency brand colors
$primary: {{- site.colors.primary-color -}};
$secondary: {{- site.colors.secondary-color -}};
$secondary-hover: lighten($secondary, 10%);

{%- for media-color in site.colors.media-colors -%}
  ${{- media-color.title -}}: {{- media-color.color -}};
{%- endfor -%}

$gap: 32px !default;
$desktop: 960px + (2 * $gap) !default;

// Mixins

@mixin touch() {
	@media screen and (max-width: $desktop - 1px){
    	@content
	}
}

@mixin desktop() {
	@media screen and (min-width: $desktop){
    	@content
	}
}

// Background
.bg{
  &-primary{
    background-color: $primary !important;
  }
  &-secondary {
    background-color: $secondary !important;
  }
  &-media-color {
    {%- for media-color in site.colors.media-colors -%}
      &-{{- forloop.index -}} {
        background-color: ${{- media-color.title -}};
        &:hover {
          background-color: darken(${{- media-color.title -}}, 10%);
        }
      }
    {%- endfor -%}
  }
}

// Color definitions
.is {
	&-primary {
		background-color: $primary !important;
	}
	&-secondary {
		background-color: $secondary !important;
	}
}

// Text color
.has-text-primary {
	color: $primary !important;
}
.has-text-secondary {
	color: $secondary !important;
}

// Menu/Left-nav
.bp-menu-list a.is-active {
	color: $secondary !important;
	border-bottom: 2px solid $secondary !important;
	&:hover {
		border-bottom: 2px solid $secondary !important;
	}
}
.bp-menu-list a:hover {
	color: $secondary !important;
	border-bottom: 1px solid $secondary !important;
}

// Button

.bp-button.is-text span {
  &:hover, &:focus {
    color: $secondary;
  }
}
.bp-button:hover {
  color: $secondary;
}

// Secondary button
.bp-sec-button {
	color: $secondary;
	& span {
		border-bottom: 2px solid $secondary !important;
	}
	&:hover {
		& span {
	    	border-bottom: 2px solid $secondary-hover !important;
	    	color: $secondary-hover !important;
	  	}
	  	& i {
	    	color: $secondary-hover !important;
	  	}
	}
}

// Bottom navigation bar
.bottom-navigation {
	a {
		background-color: $secondary;
	    &:hover{
	      background-color: darken($secondary,10%) !important;
	    }
	}
}

.bp-section.bp-section-pagetitle {
  background-color: $primary !important;
}

// Pagination
.pagination {
	span {
		&:hover {
            border-color: $secondary;
            color: $secondary;
		}
        &.selected-page:hover {
            background-color: $secondary;
            border-color: $secondary;
        }
	}
    .selected-page {
        background-color: $secondary;
        border-color: $secondary;
    }
}


// Homepage
#key-highlights{
	background-color: $primary;
	.col {
		border-left:1px solid darken($primary,10%);
		@include touch(){
			border-top:1px solid darken($primary,10%);
		}
		&:hover{
			background-color: darken($primary,10%);
		}
	}
}

// Navbar
.navbar{
  &-start{
    .navbar-item{
      a{
        &.active{
          @include touch(){
            border-bottom:2px solid $secondary;
          }
        }
      }
    }
  }
  .navbar-link:hover:after {
    border-bottom: 1px solid $secondary;
    border-left: 1px solid $secondary;
  }

  .navbar-item{
    .sub-link.is-active{
      color:$secondary;
    }

    .selector{
      &.active{
        background-color:$secondary;
      }
    }
    &.active{
      @include desktop(){
        border-bottom:1px solid $secondary;
      }
    }
  }
.navbar-item:hover {
  a {
    color:$secondary;
  }
  .selector {
      background-color:$secondary;
    }
  }
}

// Post-content
.content {
	h1, h2, h3, h4, h5 {
		color: $secondary;
		strong {
			color: $secondary;
		}
	}
	blockquote {
		border-left-color: $secondary;
	}
	blockquote > p {
		color: $secondary;
	}
	blockquote > ul {
		color: $secondary;
	}
}

// Media category buttons - not used now but will be used in the future

.media-category-button {
  text-decoration: none !important;
  color: #323232;
  margin-right: 2.5rem;
  letter-spacing: 0.5px;
}

.media-category-button:hover, .media-category-button.selected {
  color: $secondary;
  border-bottom: 2px solid $secondary;
}

// CSS to be refactored
.content img.digital-transformation-icon {
  height: 80px;
  width: 80px;
  margin-left: 0;
}

.news-content {
  position: relative;
  margin-left: 1rem;
  margin-right: 1rem;
  padding: 2rem;
  margin-top: -5rem;
  background-color: white;
}

.tag {
  display: block;
}

#business {
  display: none;
}
#government {
  display: none;
}

.image-card:hover {
  .news-content {
    background-color: darken(#ffffff, 10%);
  }
}

.hero-dropdown {
  display: flex;
  padding-top: 1.75rem;
  padding-bottom: 1.75rem;
}

.is-centered {
  margin: auto;
}

.is-three-fifths-mobile {
  width: 50%;
  @include touch() {
    width: 100%;
  }
}

//accordion Course
.accordion {
  input {
    position: absolute;
    opacity: 0;
    z-index: -1;
  }
  .tabs {
    border-radius: 0;
    overflow: hidden;
    // box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
    margin-bottom: 4em;

    h3{
      font-weight: bold;
      margin-bottom: 1em;
      color: $primary;
    }
  }
  .tab {
    width: 100%;
    color: black;
    overflow: hidden;
    &:hover {
      color: #000;
    }
  }
  .tab-label {
    display: flex;
    justify-content: space-between;
    padding: 1em;
    font-size: 1.25rem;
    color: #000000;
    cursor: pointer;
    background: #F1F2F4;
    border-radius: .5em;
    margin: .2em 0;
    transition: all .1s;

    /* Icon */
    &:hover {
      color: lighten(black, 10%);
    }
    &::after {
      content: "\002B";
      width: 2em;
      height: 2em;
      margin-left: 1em;
      text-align: center;
      transition: all .1s;
      transform-origin: center center;
    }
  }
  .tab-content {
    max-height: 0;
    padding: 0;
    border: none;
    // border-bottom: 1px solid #ddd;
    // transition: all .1s;
    margin-top: 0;

    table{

      tr{
        th{
          border-width: 1px;
        }
        td{
          border-width: 1px;
          border-bottom-width: 1px !important;
        }
      }
    }
  }
  .tab-close {
    display: flex;
    justify-content: flex-end;
    padding: 1em;
    font-size: 0.75em;
    background: $primary;
    cursor: pointer;
    &:hover {
      background: lighten($secondary, 10%);
    }
  }
  input:checked {
    + .tab-label {
      // background: darken($secondary, 10%);
      &::after {
        content: "\2212";
        // -webkit-transform: rotate(90deg);
        // transform: rotate(90deg);
        // transform-origin: center center;
      }
    }
    ~ .tab-content {
      max-height: 600vh;
      padding: 1em;
      padding-left: 3em;
      padding-right: 4em;
      padding-bottom: 3em;
      color: #2D3642;
      // padding: 1em;
    }
  }
  }
.navbar-item{
  margin: 0 1rem;

}



  .bp-hero-body {
    background: none;

    .bp-button.search-button{
      font-size: 1em !important;
      padding: .6em 1.4em !important;
      border-radius: 8px;
      margin-top: 20px;
      -webkit-box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);
      -moz-box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);
      box-shadow: 0px 5px 17px -3px rgba(18,17,90,0.2);

      &:hover{
        transform: translate(0, -3px) !important;
         -webkit-box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
          -moz-box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
        box-shadow: 0px 8px 17px -3px rgba(18,17,90,0.1);
        background: lighten(#12115A, 20%)!important;
      }
    }

    .has-text-white{
      color: #12115A !important;

      .display{
        // font-size: 4em !important;;
        line-height: 3.25rem !important;
        .is-hidden-touch{
          line-height: 4.25rem !important;
        }
      }


    }
  }


  @media screen and (max-width: 768px){
    .bp-hero{
      .bp-hero-body{
        .bp-container{
          .row{
            .col{
                .is-hidden-mobile {
                  display: block !important;
                }
            }
          }
        }
      }
    }
  }




@media screen and (max-width: 1280px) {
    .navbar-start .navbar-item + .has-dropdown {
        margin: 1rem;
        margin-top: 1.2rem;
       }
}

@media screen and (min-width: 1024px) {
  .display {
    font-size: 4.5rem;
  }
}


@media screen and (min-width: 1360px) {

  .bg-hero {
    background: url(/images/vaccinegov-hero-withlogo-lower.png) no-repeat top left !important;
    -webkit-background-size: cover !important;
    background-size: cover !important;
    background-position: center center !important;
  }
}

@media screen and (min-width: 1920px) {

  .bg-hero {
    background: url(/images/vaccinegov-hero-withlogo-evenlower.png) no-repeat top left !important;
    -webkit-background-size: cover !important;
    background-size: cover !important;
    background-position: center center !important;
  }
}


.bp-section{
  .bp-container{
    .row{
      .col{
        a.margin--top{
          margin-top: 3rem !important;
        }

        .bp-sec-button{
          margin-top: 2rem !important;
        }
      }
    }
  }
}


.bp-hero-body {
    padding: 3rem 1.5rem;
    padding-top: 6rem;
    padding-bottom: 4rem;
}

